fixed the podcast on mobile more and more

--- a/ahoyApp/www/css/foundational.css
+++ b/ahoyApp/www/css/foundational.css
@@ -576,6 +576,7 @@ button:hover {
     /* Centers the container's content */
     margin-top: 20px;
     /* Reduced top margin */
+    background-color: yellow;
   }
 }
 
@@ -1459,8 +1460,16 @@ button:hover {
 
 }
 
+.media-col-2 {
+  position: relative;
+  z-index: -2;
+}
+
 .media-col-1 {
-  margin-left: 15px;
+  margin-left: 0px;
+  min-width: 120%;
+  position: relative;
+  z-index: -1;
 }
 
 @media screen and (min-width: 768px) {
